# SlitCamera

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/slitcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/slitcamera/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/slitcamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
