cmake_minimum_required(VERSION 3.4.1)
add_library(native-lib SHARED native-lib.cpp)
set(IMAGE_UTILITY_FOLDER "../../../../AndroidProjectLibraries/image_utility")
include_directories("${IMAGE_UTILITY_FOLDER}")
add_subdirectory(${IMAGE_UTILITY_FOLDER} build)
find_library(log-lib log)
target_link_libraries(native-lib -landroid -fopenmp image_utility ${log-lib})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 ${OpenMP_CXX_FLAGS} -static-openmp -Xclang -fopenmp")